--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+*.sqlite3
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 
